--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
   "bugs": {
     "url": "https://github.com/ericoalmeida/template-node-api-service/issues"
   },
-  "homepage": "https://github.com/ericoalmeida/template-node-api-service#readme"
+  "homepage": "https://github.com/ericoalmeida/template-node-api-service#readme",
+  "engines": {
+    "node": ">=v18.14.1",
+    "npm":">=v9.3.1"
+  }
 }
