--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   "homepage": "https://github.com/ericoalmeida/template-node-api-service#readme",
   "engines": {
     "node": ">=v18.14.1",
-    "npm":">=v9.3.1"
+    "npm": ">=v9.3.1"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^17.4.4",
+    "@commitlint/config-conventional": "^17.4.4"
   }
 }
