--- a/package.json
+++ b/package.json
@@ -7,6 +7,14 @@
     "type": "git",
     "url": "git+https://github.com/ericoalmeida/template-node-api-service.git"
   },
+  "scripts": {
+    "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
+    "test:verbose": "jest --passWithNoTests --runInBand",
+    "test:unit": "npm test -- --watch --config='./jest-unit.config.js'",
+    "test:integration": "npm test -- --watch --config='./jest-integration.config.js'",
+    "test:staged": "npm test -- --findRelatedTests",
+    "test:ci": "npm test -- --coverage"
+  },
   "keywords": [],
   "author": "ericoalmeida",
   "license": "ISC",
@@ -21,6 +29,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.14.0",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "eslint": "^8.34.0",
@@ -29,7 +38,9 @@
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "husky": "^8.0.3",
+    "jest": "^29.4.3",
     "lint-staged": "^13.1.2",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
