--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@commitlint/config-conventional": "^17.4.4",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
+    "@types/module-alias": "^2.0.1",
     "@types/node": "^18.14.0",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "eslint": "^8.34.0",
@@ -47,6 +48,7 @@
   },
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "module-alias": "^2.2.2"
   }
 }
