--- a/package.json
+++ b/package.json
@@ -50,5 +50,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "module-alias": "^2.2.2"
+  },
+  "_moduleAliases": {
+    "@main": "./src/main"
   }
 }
