--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true
-  }
+  },
+  "include": ["src", "tests"],
+  "exclude": ["coverage", "node_modules", "build"]
 }
