--- a/package.json
+++ b/package.json
@@ -49,11 +49,13 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@types/swagger-ui-express": "^4.1.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "module-alias": "^2.2.2",
-    "swagger-jsdoc": "^6.2.8"
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.1"
   },
   "_moduleAliases": {
     "@main": "./src/main"
