--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "express": "^4.18.2",
     "module-alias": "^2.2.2",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^4.6.1"
+    "swagger-ui-express": "^4.6.1",
+    "tsyringe": "^4.7.0"
   },
   "_moduleAliases": {
     "@main": "./src/main"
