--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "module-alias": "^2.2.2",
+    "pino": "^8.10.0",
+    "pino-pretty": "^9.3.0",
     "reflect-metadata": "^0.1.13",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.1",
