feat: add logging

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "rootDir": "./",
     "baseUrl": "./",
     "paths": {
+      "@common/*": ["./src/common/*"],
       "@main/*": ["./src/main/*"]
     },
     "allowJs": true,
