--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "husky": "^8.0.3",
     "jest": "^29.4.3",
     "lint-staged": "^13.1.2",
+    "prisma": "^4.10.1",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
