--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@prisma/client": "^4.10.1",
     "@types/swagger-ui-express": "^4.1.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
