--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "express": "^4.18.2",
     "module-alias": "^2.2.2",
     "pino": "^8.10.0",
+    "pino-http": "^8.3.3",
     "pino-pretty": "^9.3.0",
     "reflect-metadata": "^0.1.13",
     "swagger-jsdoc": "^6.2.8",
