--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "lint-staged": "^13.1.2",
     "prisma": "^4.10.1",
     "ts-jest": "^29.0.5",
-    "ts-node": "^10.9.1",
+    "tsx": "^3.12.3",
     "typescript": "^4.9.5"
   },
   "dependencies": {
