--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "url": "git+https://github.com/ericoalmeida/template-node-api-service.git"
   },
   "scripts": {
-    "db:deploy":"prisma migrate deploy",
-    "start:dev":"tsx watch src/main/server.ts",
+    "db:deploy": "prisma migrate deploy",
+    "start:dev": "tsx watch src/main/server.ts",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "npm test -- --watch --config='./jest-unit.config.js'",
@@ -48,6 +48,7 @@
     "jest-mock-extended": "^3.0.1",
     "lint-staged": "^13.1.2",
     "prisma": "^4.10.1",
+    "rimraf": "^4.1.2",
     "ts-jest": "^29.0.5",
     "tsx": "^3.12.3",
     "typescript": "^4.9.5"
